<resources>
    <string name="app_name">DFI App</string>

    <string name="login">Login</string>
    <string name="login_hint">Enter Username</string>
    <string name="login_pwd">Enter Password</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_dashbord">Dashbord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_other">Other</string>
    <string name="menu_logout">Logout</string>
</resources>