<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:transitionName="transition_login"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number"
                android:hint="@string/login_pwd"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_password_24"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="10dp">


                <CheckBox
                    android:id="@+id/remember_me"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:text="@string/remember_me"
                    android:textSize="9dp"
                    android:textColor="@color/black" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:text="@string/forget_pwd"
                    android:textSize="9dp"/>
                <!--                android:onClick="callForgetPassword"-->


            </RelativeLayout>


            <Button
                android:id="@+id/letTheUserLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:onClick="letTheUserLoggedIn"
                android:text="@string/login"
                android:textColor="@color/white" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letTheUserLogIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:text="Create Account" />
            <!--        android:onClick="callSignUpFromLogin"-->


        </RelativeLayout>


    </LinearLayout>


</ScrollView>

